force-app/main/default/objects/YG_DefaultRecordType__mdt/YG_DefaultRecordType__mdt.object-meta.xml
<CustomObject>
    <label>YG_DefaultRecordType</label>
    <pluralLabel>YG_DefaultRecordType</pluralLabel>
</CustomObject>