force-app/main/default/objects/YG_DefaultRecordType__mdt/fields/ChildRecordType__c.field-meta.xml
<CustomField>
    <fullName>ChildRecordType__c</fullName>
    <label>Child RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>