force-app/main/default/objects/YG_DefaultRecordType__mdt/fields/FieldSet__c.field-meta.xml
<CustomField>
    <fullName>FieldSet__c</fullName>
    <label>Field Set</label>
    <length>50</length>
    <type>Text</type>
</CustomField>