force-app/main/default/objects/YG_DefaultRecordType__mdt/fields/ParentRecordType__c.field-meta.xml
<CustomField>
    <fullName>ParentRecordType__c</fullName>
    <label>Parent RecordType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>